--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,8 @@
 @font-face {
     font-family: "Volkhov";
     src: url("Fonts/Volkhov-Regular.ttf") format("truetype");
- }
+}
+
 
 * {
     margin: 0;
@@ -25,39 +26,114 @@ body {
     top: 0;
     left: 0;
     width: 100%;
-    padding: 20px 30px;
+    /* padding: 20px 30px; */
+    display: flex;
+    z-index: 999;
+}
+
+/**********Navbar***********/
+
+.navbar {
+    position: relative;
+    padding: 50px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-}
-
-.logo {
-    font-size: 40px;
-    text-shadow: -2px -2px white, 2px -2px 0 white, -2px 2px 0 white, 2px 2px 0 white;
-    color: rgb(0, 0, 0);
-    text-decoration: none;
-    font-weight: 700;
+    width: 100%;
+    box-sizing: border-box;
 }
 
 .navbar a {
-    position: relative;
-    font-size: 25px;
-    text-shadow: -1px -1px 0 rgb(255, 255, 255), 1px -1px 0 rgb(255, 255, 255), -1px 1px 0 rgb(255, 255, 255), 1px 1px 0 rgb(255, 255, 255);
-    color: rgb(0, 0, 0);
-    font-weight: 500;
+    color: white;
     text-decoration: none;
-    margin-left: 40px;
 }
+
+.navbar .logo {
+    font-size: 2em;
+    font-weight: bold;
+}
+
+.navbar .nav-links ul {
+    list-style-type: none;
+    display: flex;
+}
+
+.navbar .nav-links ul li {
+    margin: 0 25px;
+}
+
+.navbar .nav-links ul li.active a{
+    color: red;
+    font-weight: 600;
+}
+
+.navbar .menu-hamburger {
+    display: none;
+    position: absolute;
+    top: 50px;
+    right: 50px;
+    width: 35px;
+    z-index: 10;
+}
+
+@media screen and (max-width: 685px) {
+    .navbar {
+        padding: 0px;
+    }
+
+    .navbar .logo {
+        position: absolute;
+        top: 45px;
+        left: 50px;
+    }
+
+    .navbar .menu-hamburger {
+        display: block;
+    }
+
+    .nav-links {
+        top: 0;
+        left: 0;
+        position: absolute;
+        backdrop-filter: blur(7px);
+        width: 100%;
+        height: 100vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-left: -100%;
+        transition: all 0.5s ease;
+    }
+
+    .nav-links.mobile-menu {
+        margin-left: 0;
+    }
+
+    .nav-links ul {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .navbar .nav-links ul li {
+        margin: 25px 0;
+        font-size: 1.2em;
+    }
+}
+
+/**********Container***********/
 
 .all_container {
     display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
     margin: 1%;
     margin-top: 200px;
-    justify-content: center;
     padding: 20px;
-    height: auto;
     border-radius: 50%;
-    flex-wrap: wrap;
+    gap: 20px;
+    max-width: 100%;
+    box-sizing: border-box;
 }
 
 .item-container {
@@ -73,6 +149,13 @@ body {
     border-radius: 5%;
     background-color: #ffffff19;
     backdrop-filter: blur(10px);
+    opacity: 1;
+    transition: opacity 0.5s ease;
+}
+
+.item-container-transition {
+    opacity: 0;
+    transition: opacity 0.5s ease;
 }
 
 .item-img {
