--- a/css/style_product.css
+++ b/css/style_product.css
@@ -3,6 +3,14 @@
     src: url("Fonts/Volkhov-Regular.ttf") format("truetype");
  }
 
+ @media (max-width: 1600px) {
+    .left-band,
+    .right-band {
+        opacity: 0; /* Définir l'opacité à 0 pour les masquer */
+        pointer-events: none; /* Désactiver les événements de la souris sur les bandes masquées */
+    }
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -21,50 +29,129 @@ body {
 }
 
 .header {
-    display: fixe;
+    position: fixed;
     top: 0;
     left: 0;
     width: 100%;
-    padding: 20px 30px;
+    /* padding: 20px 30px; */
+    display: flex;
+    z-index: 999;
+}
+
+/**********Navbar***********/
+
+.navbar {
+    position: relative;
+    padding: 50px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    z-index: 1;
-}
-
-.logo {
-    font-size: 40px;
-    text-shadow: -2px -2px white, 2px -2px 0 white, -2px 2px 0 white, 2px 2px 0 white;
-    color: rgb(0, 0, 0);
-    text-decoration: none;
-    font-weight: 700;
-    z-index: 1;
+    width: 100%;
+    box-sizing: border-box;
 }
 
 .navbar a {
-    position: relative;
-    font-size: 25px;
-    text-shadow: -1px -1px 0 rgb(255, 255, 255), 1px -1px 0 rgb(255, 255, 255), -1px 1px 0 rgb(255, 255, 255), 1px 1px 0 rgb(255, 255, 255);
-    color: rgb(0, 0, 0);
-    font-weight: 500;
+    color: white;
     text-decoration: none;
-    margin-left: 40px;
 }
+
+.navbar .logo {
+    font-size: 2em;
+    font-weight: bold;
+}
+
+.navbar .nav-links ul {
+    list-style-type: none;
+    display: flex;
+}
+
+.navbar .nav-links ul li {
+    margin: 0 25px;
+}
+
+.navbar .nav-links ul li.active a{
+    color: red;
+    font-weight: 600;
+}
+
+.navbar .menu-hamburger {
+    display: none;
+    position: absolute;
+    top: 50px;
+    right: 50px;
+    width: 35px;
+    z-index: 10;
+}
+
+@media screen and (max-width: 685px) {
+    .navbar {
+        padding: 0px;
+    }
+
+    .navbar .logo {
+        position: absolute;
+        top: 50px;
+        left: 50px;
+    }
+
+    .navbar .menu-hamburger {
+        display: block;
+    }
+
+    .nav-links {
+        top: 0;
+        left: 0;
+        position: absolute;
+        backdrop-filter: blur(7px);
+        width: 100%;
+        height: 100vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-left: -100%;
+        transition: all 0.5s ease;
+    }
+
+    .nav-links.mobile-menu {
+        margin-left: 0;
+    }
+
+    .nav-links ul {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .navbar .nav-links ul li {
+        margin: 25px 0;
+        font-size: 1.2em;
+    }
+}
+
+/**********Container***********/
 
 .item-container {
     display: flex;
     align-items: center;
     flex-direction: column;
-    /* width: 420px; */
-    height: auto;
+    width: 420px;
+    min-width: 300px;
+    max-width: 100%;
     border: 1px solid #ddd;
     padding: 10px;
-    margin: 20px;
-    margin-top: 400px;
-    margin-right: 500px;
-    margin-left: 500px;
+    transform: translate(-50%, -50%);
     border-radius: 5%;
     backdrop-filter: blur(10px);
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    opacity: 1;
+    transition: opacity 0.5s ease;
+}
+
+.item-container-transition {
+    opacity: 0;
+    transition: opacity 0.5s ease;
 }
 
 .item-img {
@@ -93,7 +180,7 @@ body {
     top: 0;
     bottom: 0;
     width: 400px;
-    margin-top: 88px;
+    margin-top: 135px;
     border-radius: 4px;
     border: 1px solid #ddd;
     z-index: -1;
@@ -101,6 +188,7 @@ body {
     overflow: hidden;
     color: #000;
     backdrop-filter: blur(10px);
+    transition: opacity 0.5s ease;
 
 }
 
